# VerityGate

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  RESULTS_ARCHIVE.md  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_pipeline_batched.py
data/: case_template.json  gold_cases.jsonl  gold_cases_set1.jsonl  gold_cases_set2.jsonl  smoke_cases.jsonl  smoke_cases_subset.jsonl  stress_cases_key_24.jsonl  stress_cases_v0.1.jsonl  stress_mini_check.jsonl  stress_mini_duration_regression_v0.1.jsonl  stress_targeted_regression_v0.2.jsonl
docs/: test_case_schema.md
results/: RESULTS_LLAMA70B_50CASES.md
src/: __init__.py  baseline_runner.py  calibration.py  claim_filter.py  config.py  constants.py  contradiction_checks.py  diagnose_contradictions.py  diagnose_not_in_evidence.py  evidence_spans.py  gate.py  inference_detector.py  llm_client.py  metrics.py  pipeline_runner.py  report.py  schemas.py  span_matcher.py  validate_gold_cases.py  verifier.py
src/report/: __init__.py  calibration.py  generate_detailed_report.py  metrics.py  report.py
tests/: test_calibration.py  test_claim_filter.py  test_constants.py  test_contradiction_checks.py  test_evidence_spans.py  test_gate.py  test_gold_cases.py  test_inference_detector.py  test_metrics.py  test_pipeline_runner.py  test_report.py  test_schemas.py  test_span_matcher.py  test_verifier.py
