[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verity-h"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
api = ["openai>=1.0"]
hf = ["huggingface-hub>=0.20"]
groq = ["groq>=0.4.0"]

[tool.setuptools.packages.find]
include = ["src*"]
